// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiAssoDtoAdapter rnaStructureToAssociation should transform to association 1`] = `
{
  "adresse_siege_rna": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": {
        "code_postal": "42424",
        "commune": "Londre",
        "numero": "18",
        "type_voie": "RUE",
        "voie": "MEURIS",
      },
    },
  ],
  "code_objet_social_1": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "conduite d'activités économiques",
    },
  ],
  "date_creation_rna": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 1998-02-07T00:00:00.000Z,
    },
  ],
  "date_modification_rna": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 2023-01-12T00:00:00.000Z,
    },
  ],
  "date_rup": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "2018-05-13",
    },
  ],
  "denomination_rna": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "Asso qui n'existe pas",
    },
  ],
  "nature": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "Simplement déclarée",
    },
  ],
  "objet_social": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "Object social !",
    },
  ],
  "rna": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "W000000000",
    },
  ],
  "rup": [
    {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "boolean",
      "value": true,
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter sirenStructureToAssociation should transform to association 1`] = `
{
  "adresse_siege_siren": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": {
        "code_postal": "42424",
        "commune": "Londre",
        "numero": "18",
        "type_voie": "RUE",
        "voie": "MEURIS",
      },
    },
  ],
  "categorie_juridique": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "9220",
    },
  ],
  "date_creation_siren": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 1993-01-11T00:00:00.000Z,
    },
  ],
  "date_modification_siren": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 2019-11-28T00:00:00.000Z,
    },
  ],
  "denomination_siren": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "Je suis un fause asso",
    },
  ],
  "etablisements_siret": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": [
        "12300464800021",
        "12300464800013",
      ],
    },
  ],
  "nic_siege": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00021",
    },
  ],
  "siren": [
    {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "123004648",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement with contact 1`] = `
{
  "adresse": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": [
    [
      {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": {
          "civilite": undefined,
          "email": undefined,
          "nom": "Jedusor",
          "prenom": "Tom",
          "role": undefined,
          "telephone": undefined,
        },
      },
    ],
  ],
  "information_banquaire": [],
  "nic": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00000",
    },
  ],
  "ouvert": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": [
    [
      {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": {
          "civilite": undefined,
          "email": undefined,
          "nom": "Jedusor",
          "prenom": "Tom",
          "role": undefined,
          "telephone": undefined,
        },
      },
    ],
  ],
  "siege": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement with rib 1`] = `
{
  "adresse": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": [],
  "information_banquaire": [
    [
      {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": {
          "bic": "BIC_TEST",
          "iban": "TEST",
        },
      },
    ],
    [
      {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": {
          "bic": "BIC_TEST 2",
          "iban": "TEST 2",
        },
      },
    ],
  ],
  "nic": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00000",
    },
  ],
  "ouvert": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": [],
  "siege": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement without contact 1`] = `
{
  "adresse": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": undefined,
  "information_banquaire": [],
  "nic": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00001",
    },
  ],
  "ouvert": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": undefined,
  "siege": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100001",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement without rib 1`] = `
{
  "adresse": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": [],
  "information_banquaire": [],
  "nic": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00001",
    },
  ],
  "ouvert": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": [],
  "siege": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": [
    {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100001",
    },
  ],
}
`;
